--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "appwrite": "^17.0.1",
     "framer-motion": "^12.5.0",
     "keen-slider": "^6.8.6",
     "react": "^19.0.0",
