--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "appwrite": "^17.0.1",
     "framer-motion": "^12.5.0",
     "keen-slider": "^6.8.6",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
