--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "@tinymce/tinymce-react": "^6.0.0",
     "appwrite": "^17.0.1",
     "framer-motion": "^12.5.0",
     "keen-slider": "^6.8.6",
